k8s/mobile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mobile-srv
  template:
    metadata:
      labels:
        component: mobile-srv
    spec:
      imagePullSecrets:
        - name: dockerregistrykey
      containers:
        - name: mobile-srv
          image: nikhil770/mobile-srv:5.0
          ports:
            - containerPort: 8080
