k8s/store-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      component: store-srv
  template:
    metadata:
      labels:
        component: store-srv
    spec:
      imagePullSecrets:
        - name: dockerregistrykey
      containers:
        - name: store-srv
          image: nikhil770/store-srv:5.0
          ports:
            - containerPort: 8080
