k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      component: user-srv
  template:
    metadata:
      labels:
        component: user-srv
    spec:
      imagePullSecrets:
        - name: dockerregistrykey
      containers:
        - name: user-srv
          image: nikhil770/user-srv:1.0
          ports:
            - containerPort: 8080
