k8s/mobile-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobile-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: mobile-srv
  ports:
    - port: 7070
      targetPort: 8080
