k8s/store-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: store-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 8080
      targetPort: 8080
