k8s/user-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: user-srv
  ports:
    - port: 8080
      targetPort: 8080
