k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
    - host: mobile-store
      http:
        paths:
          - path: /mobile
            backend:
              serviceName: mobile-cluster-ip
              servicePort: 7070
          - path: /store
            backend:
              serviceName: store-cluster-ip
              servicePort: 8080
  tls:
  - hosts:
    - mobile-store
    secretName: mobilestore-tls-secret
